--- a/src/app/shared/card-filme/card-filme.component.html
+++ b/src/app/shared/card-filme/card-filme.component.html
@@ -1,5 +1,5 @@
 <div 
-  class="app-card-filme" routerLink="/filme/detalhes" 
+  class="app-card-filme" routerLink="/filme/detalhes/{{filme.id}}" 
   >
     <img 
     class="img-fluid rounded-3 border border-primary" 
