--- a/src/app/views/detalhes-filme/detalhes-filme.component.html
+++ b/src/app/views/detalhes-filme/detalhes-filme.component.html
@@ -36,6 +36,8 @@
     </div>
   </section>
 
+  <div class="mt-5 mb-2"></div>
+
   <div class="d-flex justify-content-center justify-content-lg-start gap-3">
     <span *ngFor="let genero of filme.generos"
   
