--- a/src/app/views/detalhes-filme/detalhes-filme.component.html
+++ b/src/app/views/detalhes-filme/detalhes-filme.component.html
@@ -39,12 +39,10 @@
   <div class="d-lg-none d-md-none mt-5 mb-2"></div>
   <div class="d-lg-none d-md-none mt-5 mb-2"></div>
 
-  <div class="d-flex justify-content-center justify-content-lg-start gap-3">
+  <div class="d-flex flex-wrap justify-content-center justify-content-lg-start gap-3">
     <span *ngFor="let genero of filme.generos"
-  
       class="badge rounded-pill fs-6 px-4 py-2 bg-primary text-light"
-      >{{genero}}</span
-    >
+    >{{ genero }}</span>
   </div>
 
   <div class="row my-4">
